Only one progress bar, as it should be. And the caution is now at the bottom.

--- a/SimTECH/SimTECH/Pages/Racing/Practice.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Practice.razor
@@ -51,7 +51,7 @@
                 <MudTd>
                     <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
                         <MudText Typo="Typo.body1">@context.FirstName</MudText>
-                        <MudText Typo="Typo.button">@context.LastName</MudText>
+                        <MudText Typo="Typo.button" Class="fontsize-button-text">@context.LastName</MudText>
                         <MudSpacer />
                         <CountryFlag Code="@context.Nationality" Size="FlagSize.Small" />
                     </MudStack>
@@ -93,8 +93,7 @@
 </MudContainer>
 
 @code {
-    [Parameter]
-    public long RaceId { get; set; }
+    [Parameter] public long RaceId { get; set; }
 
     public PracticeModel Model { get; set; }
 
