--- a/SimTECH/SimTECH/Pages/Racing/Qualy/EliminationQualy.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Qualy/EliminationQualy.razor
@@ -42,7 +42,7 @@
                 <MudTd>
                     <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
                         <MudText>@context.FirstName</MudText>
-                        <MudText Typo="Typo.button">@context.LastName</MudText>
+                        <MudText Typo="Typo.button" Class="fontsize-button-text">@context.LastName</MudText>
                         <MudSpacer />
                         <CountryFlag Code="@context.Nationality" Size="FlagSize.Small" />
                     </MudStack>
@@ -122,7 +122,7 @@
                 <MudTd>
                     <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
                         <MudText Typo="Typo.body1">@context.FirstName</MudText>
-                        <MudText Typo="Typo.button">@context.LastName</MudText>
+                        <MudText Typo="Typo.button" Class="fontsize-button-text">@context.LastName</MudText>
                         <MudSpacer />
                         <CountryFlag Code="@context.Nationality" Size="FlagSize.Small" />
                     </MudStack>
@@ -206,7 +206,7 @@
                 <MudTd>
                     <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
                         <MudText Typo="Typo.body1">@context.FirstName</MudText>
-                        <MudText Typo="Typo.button">@context.LastName</MudText>
+                        <MudText Typo="Typo.button" Class="fontsize-button-text">@context.LastName</MudText>
                         <MudSpacer />
                         <CountryFlag Code="@context.Nationality" Size="FlagSize.Small" />
                     </MudStack>
