--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -159,6 +159,10 @@ th {
     font-family: var(--mud-typography-button-family);
 }
 
+.fontsize-button-text {
+    font-size: 0.95rem;
+}
+
 .font-header {
     font-family: var(--mud-typography-h1-family);
 }
