--- a/SimTECH/SimTECH/Pages/Racing/PostRace.razor
+++ b/SimTECH/SimTECH/Pages/Racing/PostRace.razor
@@ -6,7 +6,7 @@
 
 <PageTitle>Post Race</PageTitle>
 
-<MudContainer MaxWidth="MaxWidth.False" Class="mt-4">
+<MudContainer MaxWidth="MaxWidth.False" Class="mt-4" id="postrace-container">
     @if (!loading)
     {
         <MudGrid>
@@ -24,7 +24,10 @@
 
                         <MudSpacer />
 
-                        <MudButton Color="Color.Primary" Variant="Variant.Filled" OnClick="GoToStandings">Standings</MudButton>
+                        <MudButtonGroup Color="Color.Primary" Variant="Variant.Filled">
+                            <MudButton OnClick="GoToStandings">Standings</MudButton>
+                            <ScreenshotButton TargetId="postrace-container" />
+                        </MudButtonGroup>
                     </MudStack>
                 </MudPaper>
             </MudItem>
