--- a/SimTECH/SimTECH/Pages/Racing/Qualy/SingleSessionQualy.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Qualy/SingleSessionQualy.razor
@@ -45,7 +45,7 @@
             <MudTd>
                 <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
                     <MudText Typo="Typo.body1">@context.FirstName</MudText>
-                    <MudText Typo="Typo.button">@context.LastName</MudText>
+                    <MudText Typo="Typo.button" Class="fontsize-button-text">@context.LastName</MudText>
                     <MudSpacer />
                     <CountryFlag Code="@context.Nationality" Size="FlagSize.Small" />
                 </MudStack>
